frontend/test/should_fail/cloneGraphExec.grg
rule r {
	x:Node;
	
	modify {
	---
		exec({ x.visited = clone(this) == clone(this); x.visited = copy(this) == copy(this) }); // copy is ok, clone has to fail
	}
}

